# itm

./: .gitignore  CMakeLists.txt  LINUX_NOTES.md  RunITModel.cpp  run_itm.cpp
cmake/: ITModelConfig.cmake.in  itm_config.cmake.in
include/: itm.h
scripts/: build.sh  cmake_install64.sh  cmake_linux_debug32.sh  cmake_linux_debug64.sh  cmake_linux_release32.sh  cmake_linux_release64.sh
src/: ComputeDeltaH.cpp  DiffractionLoss.cpp  FindHorizons.cpp  FreeSpaceLoss.cpp  FresnelIntegral.cpp  H0Function.cpp  InitializeArea.cpp  InitializePointToPoint.cpp  InverseComplementaryCumulativeDistributionFunction.cpp  KnifeEdgeDiffraction.cpp  LineOfSightLoss.cpp  LinearLeastSquaresFit.cpp  LongleyRice.cpp  QuickPfl.cpp  SigmaHFunction.cpp  SmoothEarthDiffraction.cpp  TerrainRoughness.cpp  TroposcatterLoss.cpp  ValidateInputs.cpp  Variability.cpp  itm_area.cpp  itm_p2p.cpp
test/data/: Profile.txt  pfl.txt  profile1.txt  profile2.txt  profile3.txt  profile4.txt  profile5.txt
test/input/: itm_1.in  p2p0.in  p2p1.in  p2p2.in  p2p3.in  test1.in  test2.in  test3.in  test4.in  test5.in  tirem_1.in
test/output/: itm_1.out  lr_1.out  p2p0.out  p2p1.out  p2p2.out  p2p3.out  test1.out  test2.out  test3.out  test4.out  test5.out  tirem3_1.out  tiremodel.out
